--- a/examples/python/MeshcatVisualizerExample.ipynb
+++ b/examples/python/MeshcatVisualizerExample.ipynb
@@ -29,11 +29,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "from idyntree.visualize import MeshcatVisualizer\n",
+    "from icub_models import get_model_file\n",
     "import numpy as np\n",
     "import os\n",
     "from ipywidgets import interact, interactive, fixed, interact_manual\n",
@@ -43,29 +44,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Workaround for https://github.com/robotology/icub-models/issues/91\n",
-    "# it assumes that icub-models is installed via conda/mamba \n",
-    "# If icub-models is installed somewhere else, just specify its installation prefix\n",
-    "# by setting the icub_models_install_prefix variable\n",
-    "if os.name == 'nt':\n",
-    "    icub_models_install_prefix = os.path.join(os.environ[\"CONDA_PREFIX\"],\"Library\")\n",
-    "else:\n",
-    "    icub_models_install_prefix = os.environ[\"CONDA_PREFIX\"]\n",
-    "\n",
-    "icub_dir = os.path.join(icub_models_install_prefix, \"share\", \"iCub\")\n",
-    "share_dir = os.path.join(icub_models_install_prefix, \"share\")\n",
-    "\n",
     "def get_model_path(robot_name='iCubGazeboV2_5'):\n",
-    "    return os.path.join(icub_dir, 'robots', robot_name, 'model.urdf')"
+    "    return str(get_model_file(robot_name))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,18 +69,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You can open the visualizer by visiting the following URL:\n",
+      "http://127.0.0.1:7001/static/\n"
+     ]
+    }
+   ],
    "source": [
     "viz = MeshcatVisualizer()\n",
-    "viz.set_model_from_file(model_path, joint_list)\n",
-    "viz.load_model(color=[1, 1, 1, 0.8])"
+    "viz.load_model_from_file(model_path=model_path, considered_joints=joint_list, model_name=\"iCub\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# load primitive shape\n",
+    "viz.load_sphere(radius=0.1, shape_name='sphere', color = [1, 0.7, 0, 1])\n",
+    "viz.load_cylinder(radius=0.1, length =0.5, shape_name='cylinder', color = [0, 0.7, 1, 1])\n",
+    "viz.load_box(x=0.1, y =0.5, z =0.7, shape_name='box', color = [0.18, 0.49, 0.2, 1])\n",
+    "viz.set_primitive_geometry_transform(position=np.array([0.0, 0.5, 0.0]), rotation=np.eye(3), shape_name=\"sphere\")\n",
+    "viz.set_primitive_geometry_transform(position=np.array([0.0, -0.5, 0.0]), rotation=np.eye(3), shape_name=\"cylinder\")\n",
+    "viz.set_primitive_geometry_transform(position=np.array([0.0, -1, 0.0]), rotation=np.eye(3), shape_name=\"box\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,31 +111,73 @@
     "    R = np.eye(3)\n",
     "    p = np.array([0.0, 0.0, 0.0])\n",
     "    s = np.array(list(joint_values.values()))\n",
-    "    viz.display(p, R, s)"
+    "    viz.set_multibody_system_state(p, R, s, model_name='iCub')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "            <div style=\"height: 400px; width: 100%; overflow-x: auto; overflow-y: hidden; resize: both\">\n",
+       "            <iframe src=\"http://127.0.0.1:7001/static/\" style=\"width: 100%; height: 100%; border: none\"></iframe>\n",
+       "            </div>\n",
+       "            "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "viz.jupyter_cell()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Widget Javascript not detected.  It may not be installed or enabled properly.\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3ef3d1ef13e044b0b440a63a5f5b2e98"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "interact(update_the_model, **joint_dictionary);"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -137,7 +191,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
